# relm4-store

./: .gitignore  Cargo.toml  LICENSE  README.md  book.toml  todo.md
book/: 01-birth.md  02-goals.md  (+5 more)
relm4-store/: Cargo.toml  README.md
relm4-store-backend-dummy/: Cargo.toml  README.md
relm4-store-backend-dummy/src/: configuration.rs  lib.rs
relm4-store-backend-dummy/src/test_cases/: add.rs  add_multistep.rs  basic.rs  mod.rs  remove.rs  test_case_builder.rs  tests.rs
relm4-store-backend-dummy/src/tests/: mod.rs
relm4-store-backend-inmemory/: Cargo.toml  README.md
relm4-store-backend-inmemory/src/: lib.rs
relm4-store-backend-inmemory/src/backend/: component.rs  mod.rs
relm4-store-backend-inmemory/src/backend_sorted/: indexing.rs  key.rs  mod.rs
relm4-store-backend-inmemory/tests/: common.rs  tests.rs
relm4-store-backend-inmemory/tests/backend_sorted/: insert_ascending.rs  insert_descending.rs  mod.rs
relm4-store-collections/: Cargo.toml  README.md
relm4-store-collections/src/: lib.rs
relm4-store-collections/src/data_container/: mod.rs  window_changeset.rs
relm4-store-collections/src/data_container/tests/: insert_left.rs  insert_right.rs  mod.rs  remove_left.rs  remove_right.rs  test_data.rs
relm4-store-collections/src/tree/: configuration.rs  mod.rs
relm4-store-collections/src/tree/impls/: drop.rs  insert.rs  len.rs  mod.rs  new.rs  orig.c
relm4-store-collections/src/tree/test/: mod.rs
relm4-store-components/: Cargo.toml  README.md
relm4-store-components/src/: lib.rs
relm4-store-components/src/pagination/: mod.rs
relm4-store-examples/: Cargo.toml
relm4-store-examples/examples/24_char_id_allocator/: main.rs
relm4-store-examples/examples/i32_allocator/: main.rs
relm4-store-examples/examples/id_allocator_with_different_types_for_new_and_permanent/: main.rs
relm4-store-examples/examples/todo_1/: main.rs
relm4-store-examples/examples/todo_1/etc/: log4rs.yaml
relm4-store-examples/examples/todo_1/model/: task.rs
relm4-store-examples/examples/todo_1/store/: tasks.rs
relm4-store-examples/examples/todo_1/view/: main_window.rs  task.rs  task_list.rs
relm4-store-examples/examples/todo_2/: main.rs
relm4-store-examples/examples/todo_2/etc/: log4rs.yaml
relm4-store-examples/examples/todo_2/model/: task.rs
relm4-store-examples/examples/todo_2/store/: tasks.rs
relm4-store-examples/examples/todo_2/view/: main_window.rs  task.rs  task_list.rs
relm4-store-examples/examples/todo_2_generating_tasks/: main.rs
relm4-store-examples/examples/todo_2_generating_tasks/store/: mod.rs  tasks.rs
relm4-store-examples/examples/todo_2_generating_tasks/view/: main_window.rs  task_list.rs
relm4-store-examples/examples/todo_2_set_pagination/: main.rs
relm4-store-examples/examples/todo_2_set_pagination/view/: main_window.rs  task_list.rs
relm4-store-examples/examples/todo_2_single_scroll/: main.rs
relm4-store-examples/examples/todo_2_single_scroll/model/: task.rs
relm4-store-examples/examples/todo_2_single_scroll/store/: tasks.rs
relm4-store-examples/examples/todo_2_single_scroll/view/: main_window.rs  task.rs  task_list.rs
relm4-store-examples/examples/todo_3/: main.rs
relm4-store-examples/examples/todo_3-early/view/: main_window.rs  task.rs  task_list.rs
relm4-store-examples/examples/todo_3/model/: task.rs
relm4-store-examples/examples/todo_3/store/: mod.rs  tasks.rs
relm4-store-examples/examples/todo_3/view/: main_window.rs  mod.rs  task.rs  task_list.rs
relm4-store-examples/examples/todo_3_sorted_store/: main.rs
relm4-store-examples/examples/todo_3_sorted_store/view/: main_window.rs  task_list.rs
relm4-store-examples/examples/todo_4/: main.rs
relm4-store-examples/examples/todo_4/etc/: log4rs.yaml
relm4-store-examples/examples/todo_4/store/: mod.rs  tasks.rs
relm4-store-examples/examples/todo_4/view/: main_window.rs  mod.rs  task_list.rs
relm4-store-examples/examples/window_behavior/view/: task_list.rs
relm4-store-record/: Cargo.toml
relm4-store-record/src/: id.rs  lib.rs  uuid_allocator.rs
relm4-store-reexport/: Cargo.toml  README.md
relm4-store-reexport/src/: lib.rs
relm4-store-view-implementation/: Cargo.toml  README.md
relm4-store-view-implementation/src/: lib.rs  widgets.rs  window_changeset.rs
relm4-store-view-implementation/src/implementation/: data_store.rs  factory.rs  mod.rs
relm4-store-view-implementation/src/implementation/data_container/: mod.rs
relm4-store-view-implementation/tests/: store_view_implementation.rs  tests.rs
relm4-store-view-implementation/tests/common/: mod.rs
relm4-store-view-implementation/tests/store_view_implementation/: mod.rs  value_tracking_window.rs
relm4-store-view-implementation/tests/store_view_implementation/keep_on_bottom/: add.rs  mod.rs
relm4-store-view-implementation/tests/store_view_implementation/keep_on_top/: mod.rs  remove.rs
relm4-store-view-implementation/tests/store_view_implementation/position_tracking_window/: mod.rs
relm4-store-view-implementation/tests/store_view_implementation/slide/: mod.rs
relm4-store-view-implementation/tests/store_view_implementation/value_tracking_window/: add.rs  mod.rs  remove.rs
relm4-store/src/: handler_wrapper.rs  lib.rs  math.rs  pagination.rs  position.rs  record_with_location.rs  redraw_messages.rs  store.rs  store_id.rs  store_msg.rs  store_size.rs  store_view_implementation.rs  store_view_interface.rs  store_view_msg.rs  widgets.rs  window_changeset.rs
relm4-store/src/factory_builder/: mod.rs
relm4-store/src/factory_configuration/: impls.rs  mod.rs
relm4-store/src/factory_prototype/: impls.rs  mod.rs
relm4-store/src/math/: mod.rs  tests.rs
relm4-store/src/store_view_component/: mod.rs
relm4-store/src/store_view_implementation/: data_store.rs  mod.rs  window_changeset.rs
relm4-store/src/store_view_implementation/implementation/: data_store.rs  factory.rs  mod.rs
relm4-store/src/store_view_interface/: mod.rs
relm4-store/src/window/: keep_on_bottom.rs  keep_on_top.rs  mod.rs  position_tracking_window.rs  store_state.rs  value_tracking_window.rs  window_transition.rs
(+61 files in other folders)
