[package]
name = "relm4-extension-store"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Data store for relm4"
keywords = ["gui", "gtk", "gtk4", "relm4"]
categories = ["gui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dummy-bin"
path = "src/main.rs"
test = false
bench = false

[workspace]
members = [
    "relm4-store",
    "relm4-store-backend-dummy",
    "relm4-store-backend-inmemory",
    "relm4-store-collections",
    "relm4-store-components",
    "relm4-store-examples",
    "relm4-store-record",
    "relm4-store-reexport",
    "relm4-store-view-implementation",
]

[dependencies]