# [package]
# name = "relm4-extension-store"
# version = "0.1.0-beta"
# edition = "2021"
# description = "Data store for relm4"
# keywords = ["gui", "gtk", "gtk4", "relm4"]
# categories = ["gui"]
# repository = "https://github.com/mskorkowski/relm4-store"
# documentation = "https://mskorkowski.github.io/relm4-store/beta/book/index.html"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "relm4-store",
    "relm4-store-backend-dummy",
    "relm4-store-backend-inmemory",
    "relm4-store-collections",
    "relm4-store-components",
    "relm4-store-examples",
    "relm4-store-record",
    "relm4-store-reexport",
    "relm4-store-view-implementation",
]

[profile.dev]
debug = true
panic = "abort"

[profile.release]
debug = true
panic = "abort"

# [dependencies]