[package]
name = "relm4-store-backend-dummy"
description = "Dummy backend for relm4-store used for writing tests"
version = "0.1.0-beta.2"
edition = "2021"
keywords = ["gui", "gtk", "gtk4", "relm4"]
categories = ["gui"]
repository = "https://github.com/mskorkowski/relm4-store"
documentation = "https://mskorkowski.github.io/relm4-store/beta/book/index.html"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
reexport = { path = "../relm4-store-reexport", package = "relm4-store-reexport", version="0.1.0-beta.1" }
record = { path = "../relm4-store-record", package = "relm4-store-record", version="0.1.0-beta.1" }
store = { path = "../relm4-store", package = "relm4-store", version="0.1.0-beta.1" }

[dev-dependencies]
gtk-test="0.14.0"
