[package]
name = "relm4-store-backend-inmemory"
description = "In memory backend for relm4-store"
version = "0.1.0-beta"
edition = "2021"
keywords = ["gui", "gtk", "gtk4", "relm4"]
categories = ["gui"]
repository = "https://github.com/mskorkowski/relm4-store"
documentation = "https://mskorkowski.github.io/relm4-store/beta/book/index.html"
readme = "README.md"

[dependencies]
reexport = { path = "../relm4-store-reexport", package = "relm4-store-reexport" }
record = { path = "../relm4-store-record", package = "relm4-store-record" }
store = { path = "../relm4-store", package = "relm4-store" }

[dev-dependencies]
dummy = {path = "../relm4-store-backend-dummy", package = "relm4-store-backend-dummy" }
serial_test = "0.5.1"