[package]
name = "relm4-store-collections"
publish = false
description = "Custom collections required by the relm4-store"
version = "0.1.0-beta.1"
edition = "2021"
keywords = ["gui", "gtk", "gtk4", "relm4"]
categories = ["gui"]
repository = "https://github.com/mskorkowski/relm4-store"
documentation = "https://mskorkowski.github.io/relm4-store/beta/book/index.html"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]