[package]
name = "relm4-store-components"
version = "0.1.0"
edition = "2021"

[dependencies]
reexport = { path = "../relm4-store-reexport", package = "relm4-store-reexport" }
record = { path = "../relm4-store-record", package = "relm4-store-record" }
store = { path = "../relm4-store", package = "relm4-store" }
store-view = { path = "../relm4-store-view-implementation", package = "relm4-store-view-implementation" }