[package]
name = "relm4-store-examples"
description = "examples for relm4-store"
version = "0.1.0-beta"
edition = "2021"
keywords = ["gui", "gtk", "gtk4", "relm4"]
categories = ["gui"]
repository = "https://github.com/mskorkowski/relm4-store"
documentation = "https://mskorkowski.github.io/relm4-store/beta/book/index.html"
readme = "README.md"

[dependencies]
reexport = { path = "../relm4-store-reexport", package = "relm4-store-reexport" }
record = { path = "../relm4-store-record", package = "relm4-store-record" }
store = { path = "../relm4-store", package = "relm4-store" }
store-view = { path = "../relm4-store-view-implementation", package = "relm4-store-view-implementation"}
backend_inmemory = { path = "../relm4-store-backend-inmemory", package = "relm4-store-backend-inmemory" }
components = { path = "../relm4-store-components", package = "relm4-store-components" }
log4rs = "1.0.0"