[package]
name="relm4-store-reexport"
description = "Holds all dependencies for relm4-store in single place"
version = "0.1.0-beta.1"
edition = "2021"
keywords = ["gui", "gtk", "gtk4", "relm4"]
categories = ["gui"]
repository = "https://github.com/mskorkowski/relm4-store"
documentation = "https://mskorkowski.github.io/relm4-store/beta/book/index.html"
readme = "README.md"

[dependencies]
log = "0.4.14"
relm4 = "0.4.0-beta.3"
relm4-macros = "0.4.0-beta.3"
relm4-components = "0.4.0-beta.3"
# relm4 = { package = "relm4", path="../../relm4" }
# relm4-macros = {package = "relm4-macros", path="../../relm4/relm4-macros"}
# relm4-components = {package = "relm4-components", path="../../relm4/relm4-components"}
tracker = "^0.1.1"
# tracker = { package = "tracker", path="../../Tracker" }
gtk = { version = "0.3.1", package = "gtk4" }
uuid = { version = "^0.8.2", features = ["serde", "v4"] }
adw = { version = "0.1.0-alpha-6", optional = true, package = "libadwaita" }