[package]
name = "relm4-store"
version = "0.1.0"
edition = "2018"

[profile.dev]
debug = true
panic = "abort"

[profile.release]
debug = true
panic = "abort"

[dependencies]
reexport = { path = "../relm4-store-reexport", package = "relm4-store-reexport" }
record = { path = "../relm4-store-record", package = "relm4-store-record" }