[package]
name = "relm4-store"
description = "Data store for relm4"
version = "0.1.0-beta.1"
edition = "2021"
keywords = ["gui", "gtk", "gtk4", "relm4"]
categories = ["gui"]
repository = "https://github.com/mskorkowski/relm4-store"
documentation = "https://mskorkowski.github.io/relm4-store/beta/book/index.html"
readme = "README.md"

[dependencies]
reexport = { path = "../relm4-store-reexport", package = "relm4-store-reexport", version = "0.1.0-beta" }
record = { path = "../relm4-store-record", package = "relm4-store-record", version = "0.1.0-beta" }